# Vidup

./: .gitignore  CMakeLists.txt  README.md
app/: ffmpeg_tests.cpp  ffmpeg_tests.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  worker.cpp  worker.h
app/ffmpeg/: codecparam.cpp  codecparam.h  ffmpegdecoder.cpp  ffmpegdecoder.h  ffmpegencoder.cpp  ffmpegencoder.h  ffmpegerror.cpp  ffmpegerror.h  frame.h
